test/test-suits/errors/test-15-il_typed_process_context/input.dhl
a($p:string), $q:int :- $p = $q | b
